# EmbodiedPi-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: hardware_bom.md  local_ai_setup.md  rehab_coach_demo.md  safety.md  wiring.md
embodiedpi/: __init__.py  cli.py  core.py  dashboard.py
firmware/: i2c_scan.py  servo_test.py
gestures/: attention.yaml  curious_tilt.yaml  fist_bump.yaml  happy_bounce.yaml  idle_breathing.yaml  nod.yaml  shake_head.yaml  sleepy_mode.yaml  thinking_pose.yaml  wave.yaml
robot_profiles/: default_7_servo.yaml  simple_3_servo.yaml
tests/: test_core.py
