[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodiedpi-ai"
version = "0.1.0"
description = "Voice-to-gesture embodied AI framework for Raspberry Pi robots"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Zen KOH"}]
keywords = ["raspberry-pi", "embodied-ai", "robotics", "servo", "pca9685"]
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "requests>=2.31"
]

[project.optional-dependencies]
pi = [
  "adafruit-circuitpython-pca9685>=3.4",
  "adafruit-circuitpython-servokit>=1.3",
  "adafruit-blinka>=8.0"
]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.27"]

[project.scripts]
embodiedpi = "embodiedpi.cli:main"

[tool.setuptools.packages.find]
include = ["embodiedpi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
